Simplify the UI even further; consolidate buttons/controls in one place + add SAM file headers if running samtools view

--- a/web/dashboard.css
+++ b/web/dashboard.css
@@ -1,23 +1,4 @@
 /* -----------------------------------------------------------------------------
-   Custom CSS
-   ----------------------------------------------------------------------------- */
-.bg-primary {
-  background-color: #4f7ea5 !important;
-}
-
-.navbar-brand {
-  box-shadow: none;
-}
-
-#file-local-path {
-  font-family: 'Courier New', Courier, monospace;
-  background-color: #eee;
-  font-size: 80%;
-  padding: 2px !important;
-}
-
-
-/* -----------------------------------------------------------------------------
    Theme defaults
    ----------------------------------------------------------------------------- */
 
@@ -114,3 +95,26 @@ body {
 
 .border-top { border-top: 1px solid #e5e5e5; }
 .border-bottom { border-bottom: 1px solid #e5e5e5; }
+
+
+
+
+/* -----------------------------------------------------------------------------
+   Custom CSS
+   ----------------------------------------------------------------------------- */
+.bg-primary {
+  background-color: #4f7ea5 !important;
+}
+
+.navbar-brand {
+  box-shadow: none;
+}
+
+#file-local-path {
+  font-family: 'Courier New', Courier, monospace;
+  background-color: #eee;
+  font-size: 75%;
+  padding: 2px !important;
+  height: 18px;
+  margin-top: 4px;
+}
